--- a/estilos/style.css
+++ b/estilos/style.css
@@ -11,7 +11,8 @@
 * {
     padding: 0;
     margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    box-sizing: border-box;
 }
 
 html {
@@ -23,18 +24,45 @@ body {
 }
 
 main {
-    padding: 10px;
-    width: 300px;
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+}
+
+section#login {
+    width: 270px;
     height: 450px;
-    display: inline-block;
-    margin: auto;
+    display: block;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     border: 3px solid black;
     background-color: white;
-    
     border-radius: 10px;
+    overflow: hidden;
+}
+
+section#login > div#img {
+    display: block;
+    position: relative;
+    width: 100%;
+    height: 40%;
+    background-image: url(../imagens/paisagem-login.jpg);
+    background-size: cover;
     
 }
+
+section#login > div#form {
+    display: block;
+    padding: 10px;
+}
+
+div.caixa {
+    color: white;
+    border-radius: 25px;
+    background-color: var(--cor1);
+    padding: 10px;
+    margin: 10px 0;
+}
+
