--- a/estilos/style.css
+++ b/estilos/style.css
@@ -23,6 +23,10 @@ body {
     background-color: var(--cor1);
 }
 
+h2 {
+    text-align: center;
+}
+
 main {
     position: relative;
     width: 100vw;
@@ -39,7 +43,7 @@ section#login {
     transform: translate(-50%, -50%);
     border: 3px solid black;
     background-color: white;
-    border-radius: 10px;
+    border-radius: 20px;
     overflow: hidden;
 }
 
@@ -62,7 +66,7 @@ div.caixa {
     color: white;
     border-radius: 25px;
     background-color: var(--cor1);
-    padding: 10px;
+    padding: 5px;
     margin: 10px 0;
 }
 
