--- a/estilos/style.css
+++ b/estilos/style.css
@@ -23,9 +23,7 @@ body {
     background-color: var(--cor1);
 }
 
-h2 {
-    text-align: center;
-}
+
 
 main {
     position: relative;
@@ -45,6 +43,8 @@ section#login {
     background-color: white;
     border-radius: 20px;
     overflow: hidden;
+    transition: width .3s, height .3s;
+    transition-timing-function: ease;
 }
 
 section#login > div#img {
@@ -54,7 +54,6 @@ section#login > div#img {
     height: 40%;
     background-image: url(../imagens/paisagem-login.jpg);
     background-size: cover;
-    
 }
 
 section#login > div#form {
@@ -62,11 +61,55 @@ section#login > div#form {
     padding: 10px;
 }
 
-div.caixa {
+section#login > div#form > h2 {
+    text-align: center;
+}
+
+section#login > div#form > p {
+    font-size: 0.8em;
+}
+
+/*div.caixa {
     color: white;
     border-radius: 25px;
     background-color: var(--cor1);
-    padding: 5px;
+    padding: 4px;
     margin: 10px 0;
+}*/
+
+#ienviar {
+    background-color: var(--cor5);
+    border-radius: 5px;
+    padding: 2px 5px;
+    color: white;
+    font-size: 1em;
+    border: none;
+    cursor: pointer;
+    display: block;
+    width: 100%;
+    height: 35px;
 }
 
+#ienviar:hover {
+    background-color: #af4924;
+    transition: 300ms;
+}
+
+#iesq {
+    text-decoration: none;
+    background-color: var(--cor5);
+    border-radius: 5px;
+    padding: 0px 5px 5px 4px;
+    color: white;
+    font-size: 1em;
+    display: block;
+    width: 100%;
+    text-align: center;
+    margin-top: 3px;
+    height: 35px;
+}
+
+#iesq:hover {
+    background-color: #af4924;
+    transition: 300ms;
+}
